# learning_restapi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  schemas.py
migrations/versions/: 0c34228ef3bf_.py  7814197db9aa_.py
models/: item.py  tag.py
resources/: item.py  store.py  tag.py  user.py
