[project]
name = "learning-restapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-jwt-extended>=4.7.1",
    "flask-smorest>=0.46.2",
    "flask-sqlalchemy>=3.1.1",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
